Bug 1020743: Fix bug in which we don't keep track of which clipboard we cached, general or find, which resulted in pasting from the wrong clipboard on OS X. r=bz