widget/cocoa/nsClipboard.h
@@ -38,13 +38,8 @@ protected:
   NS_IMETHOD GetNativeClipboardData(nsITransferable * aTransferable, int32_t aWhichClipboard);
   
 private:
-  // This is always set to the native change count after any modification of the
-  // general clipboard.
-  int mChangeCountGeneral;
-  // This is always set to the native change count after any modification of the
-  // find clipboard.
-  int mChangeCountFind;
-
+  int32_t mCachedClipboard;
+  int32_t mChangeCount; // Set to the native change count after any modification of the clipboard.
 };
 
 #endif // nsClipboard_h_
